version 0.4-10 (XX-XX-XXXX):

- changed size of some name buffers from 10 to 100, to get rid of "-Wformat-overflow" warnings
- speedups for data normalization
- SnnsRObjectFactory now has an optional parameter to deep-copy objects

version 0.4-9 (16-12-2016):

- added demos kindly provided by Seymour Shlien
- single quoted 'RSNNS' in DESCRIPTION (required by CRAN maintainer)
- added a check for NULL in the unit sorting introduced in 0.4-7, to prevent a warning for architectures with no output.
- now checking if the input is numeric, after a conversion to matrix. Before, string input yielded an error in the C++ code and R stopped.
- fixed a bug in the rbfDDA algorithm, related to memory allocation. This will have affected every network architecture that is growing in size of units.
- reimplemented SnnsR__genericPredictCurrPatSet and parts of SnnsR__createPatSet in C++, to get general speed-ups.
- fixed handling of the target variable in DLVQ. Was only working for numeric values starting from 0. Now converting to factor
- added outputActFunc as a parameter to mlp()
- bugfix: changed "package" to "PACKAGE" in .Call calls

version 0.4-8: --

version 0.4-7 (05-06-2015):

- fixed a problem occurring with pruned networks, that order of units was not preserved, so that predictions given were wrong (columns changed)
- put NeuralNetTools in suggests field and now mentioning it in the documentation

version 0.4-6 (22-12-2014):

- fixing more memory access issues, discovered by valgrind
- included a bugfix by Tamer Rizk from github, slightly modified
- fixed some "dangling else" warnings
- fixed warnings for misuse of abs() function for floating point values; fabs has to be used in that case
- removed @S3method keywords to fix warnings in roxygen2-4
- now using R's random number generator instead of the system's one

version 0.4-5 (22-05-2014):

- fixing memory access issues, discovered by valgrind and AddressSanitizer
- actually freeing memory now in the destructor