@@ -19,7 +19,7 @@ Version: 0.4-10
 URL: https://github.com/cbergmeir/RSNNS
 BugReports: https://github.com/cbergmeir/RSNNS/issues
 MailingList: rsnns@googlegroups.com
-Date: 2017-12-06
+Date: 2017-12-08
 Depends:
     R (>= 2.10.0),
     methods,
