@@ -1,0 +1,23 @@
+#include <R.h>
+#include <Rinternals.h>
+#include <stdlib.h> // for NULL
+#include <R_ext/Rdynload.h>
+
+/*
+  The following symbols/expressions for .NAME have been omitted
+
+    myFuncName
+
+  Most likely possible values need to be added below.
+*/
+
+/* FIXME: 
+   Check these declarations against the C/Fortran source code.
+*/
+
+void R_init_RSNNS(DllInfo *dll)
+{
+    R_registerRoutines(dll, NULL, NULL, NULL, NULL);
+    R_useDynamicSymbols(dll, TRUE);
+}
+
