@@ -1,5 +1,6 @@
 version 0.4-10 (XX-XX-XXXX):
 
+- fixed the Found no calls to: ‘R_registerRoutines’, ‘R_useDynamicSymbols’ note
 - changed size of some name buffers from 10 to 100, to get rid of "-Wformat-overflow" warnings
 - speedups for data normalization
 - SnnsRObjectFactory now has an optional parameter to deep-copy objects
